<resources>
    <string name="app_name">eBallot</string>

    <string name="votingCode">Please Enter Election ID</string>
    <string name="enterCode">NEXT</string>

    <!-- Votes -->
    <string name="yes">Yay</string>
    <string name="no">Nay</string>
    <string name="abstain">Abstain</string>

    <string name="vote">VOTE</string>
    <string name="filler">Loading...</string>

    <string name="close">CLOSE</string>
    <string name="done">DONE</string>

</resources>
